--- a/MainSKI/WebSKI/views/orderCard.html
+++ b/MainSKI/WebSKI/views/orderCard.html
@@ -15,7 +15,14 @@
     </li>
 </ul>
 
-<table border="1">
+<table border="1" ng-show="view=='list''">
+    <tr>
+        <th colspan="6"></th>              
+        <th colspan="3"><center>4</center></th>
+        <th colspan="3"><center>5</center></th>
+        <th colspan="3"><center>6</center></th>
+        <th colspan="3"><center>7</center></th>        
+    </tr>
     <tr>
         <th>Pos</th>
         <th>Kode/Tekst</th>
@@ -23,13 +30,6 @@
         <th>Fin.</th>
         <th>Antal</th>
         <th>Enhed</th>
-        <th colspan="3"><center>4</center></th>
-        <th colspan="3"><center>5</center></th>
-        <th colspan="3"><center>6</center></th>
-        <th colspan="3"><center>7</center></th>        
-    </tr>
-    <tr>
-        <th colspan="6"></th>              
         <th>begyndt</th>
         <th>færdig</th>
         <th>kommentar</th>
@@ -43,17 +43,47 @@
         <th>færdig</th>
         <th>kommentar</th>    
     </tr>
-    <tr>{{}}</tr>
+    <tbody ng-repeat="heading in orderFactory.getCurrentOrder().Headings">
+        <!--Skrives sammen med det nedenunder-->
+        <tr>
+            <th colspan="18"><center>{{heading}}</center></th>
+        </tr>
+    
+        <tr ng-repeat="element in orderFactory.getElementsByHeading(heading)"> <!--Do this right-->
+            <td><center> {{element.Position}} </center></td>
+            <td> {{element.Text}} </td>
+            <td><center> {{element.Hinge}}</center></td>
+            <td><center> {{element.Fin}}</center></td>
+            <td><center> {{element.Amount}}</center></td>
+            <td><center> {{element.Unit}}</center></td>
 
-    <tr ng-repeat="headingID in orderFactory.getCurrentOrder().ElementHeadings"></tr> <!--Skrives sammen med det nedenunder-->
-
-    <tr ng-repeat="element in orderFactory.getCurrentOrder().Elements"> <!--Do this right-->
-        <td><center> {{element.Position}} </center></td>
-        <td> {{element.Text}} </td>
-        <td><center> {{element.Hinge}}</center></td>
-        <td><center> {{element.Fin}}</center></td>
-        <td><center> {{element.Amount}}</center></td>
-        <td><center> {{element.Unit}}</center></td>
-
-    </tr>
+            <td align="center"><input type="checkbox" ng-checked="element.ProgressInfo[0].Begun" /></td>
+            <td align="center"><input type="checkbox" ng-checked="element.ProgressInfo[0].Done" /></td>
+            <td><button ng-click="startEdit(0)">Note</button></td>
+            <td align="center"><input type="checkbox" ng-checked="element.ProgressInfo[1].Begun" /></td>
+            <td align="center"><input type="checkbox" ng-checked="element.ProgressInfo[1].Done" /></td>
+            <td><button ng-click="startEdit(1)">Note</button></td>
+            <td align="center"><input type="checkbox" ng-checked="element.ProgressInfo[2].Begun" /></td>
+            <td align="center"><input type="checkbox" ng-checked="element.ProgressInfo[2].Done" /></td>
+            <td><button ng-click="startEdit(2)">Note</button></td>
+            <td align="center"><input type="checkbox" ng-checked="element.ProgressInfo[3].Begun" /></td>
+            <td align="center"><input type="checkbox" ng-checked="element.ProgressInfo[3].Done" /></td>
+            <td><button ng-click="startEdit(3)">Note</button></td>
+        </tr>
+    </tbody>
 </table>
+
+<div ng-show="view=='edit'">
+    <h3>Skriv Note:</h3>
+    <div class="row">
+        <div class="col-sm-6"> <!-- TODO: Read note data into input box.-->
+            <input class="form-control input-lg" type="text" placeholder="Skriv Note Her" ng-model="note" />
+        </div>
+    </div>
+    <div class="row" style="margin-top: 12px;">
+        <div class="col-sm-6">
+            <button class="btn btn-success btn" ng-disabled="note==''" ng-click="save()">Gem</button>
+            <button class="btn btn-warning btn" ng-click="cancelEdit()">Anuller</button>
+        </div>
+    </div>
+</div>
