- Fixed Encoding Issue. - Fixed Date issue. - Fixed "Anuller" issue. - Gave almost everything a facelift. - Just remebered - I did -not- read the report. too late now. kthxbai!

--- a/MainSKI/WebSKI/views/appendixLinkList.html
+++ b/MainSKI/WebSKI/views/appendixLinkList.html
@@ -1,11 +1,11 @@
-<h1>Tillæg til Ordrebekræftelse: </h1>
+ï»¿<h1>TillÃ¦g til OrdrebekrÃ¦ftelse: </h1>
 <h4> OrdreNummer: {{orderFactory.getCurrentOrder().ID}}</h4>
 
 <p>
-    <a ng-href="#/orderList" ng-click="refreshPage()"> Se OrdreOversigt </a>
+    <a ng-href="#/orderList" ng-click="refreshPage()">Se Ordreoversigt</a>
 </p>
 <td>
-    <a ng-href="#/orderCard" ng-click="displayOrderCard(orderFactory.getCurrentOrder().ID)"> Tilbage til Ordre </a>
+    <a ng-href="#/orderCard" ng-click="displayOrderCard(orderFactory.getCurrentOrder().ID)">Tilbage til Ordre</a>
 </td>
 
 
